--- a/tsubuyaki/src/main/resources/templates/tsubuyaki_list.html
+++ b/tsubuyaki/src/main/resources/templates/tsubuyaki_list.html
@@ -19,6 +19,14 @@
         <input type="text" required th:field="*{comment}" />
         <input type="submit" value="つぶやく" />
     </form>
+    <h2>検索</h2>
+    <form th:action="@{/search}" method="post">
+        <input type="text" name="word" th:value="${word}">
+        <input type="submit" value="検索">
+    </form>
+    <form th:action="@{/read}" method="get">
+        <input type="submit" value="検索解除して全てを表示">
+    </form>
     <h2>タイトルへ</h2>
     <a th:href="@{/}">戻る</a>
 </body>
